SERVER-7989: ContextSwitcher::PreemptionReceived() was checking the default isolate